--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,10 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <i class="fas fa-store"></i> Kho Mỹ Phẩm
+                <i class="fas fa-store me-2"></i> Kho Mỹ Phẩm
             </a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -30,27 +30,27 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="/">
-                            <i class="fas fa-home"></i> Trang chủ
+                            <i class="fas fa-home me-1"></i> Trang chủ
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'products:product_list' %}">
-                            <i class="fas fa-box"></i> Sản phẩm
+                            <i class="fas fa-box me-1"></i> Sản phẩm
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'inventory:import_list' %}">
-                            <i class="fas fa-download"></i> Nhập kho
+                            <i class="fas fa-download me-1"></i> Nhập kho
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'inventory:export_list' %}">
-                            <i class="fas fa-upload"></i> Xuất kho
+                            <i class="fas fa-upload me-1"></i> Xuất kho
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'reports:report_list' %}">
-                            <i class="fas fa-chart-bar"></i> Báo cáo
+                            <i class="fas fa-chart-bar me-1"></i> Báo cáo
                         </a>
                     </li>
                 </ul>
@@ -59,24 +59,26 @@
                     {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">
-                                <i class="fas fa-user"></i> {{ user.get_full_name|default:user.username }}
+                                <i class="fas fa-user me-1"></i> {{ user.get_full_name|default:user.username }}
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'user_info' %}">
-                                    <i class="fas fa-user-circle"></i> Thông tin cá nhân
+                                    <i class="fas fa-user-circle me-2"></i> Thông tin cá nhân
                                 </a></li>
                                 <li><a class="dropdown-item" href="{% url 'profile' %}">
-                                    <i class="fas fa-edit"></i> Chỉnh sửa hồ sơ
+                                    <i class="fas fa-edit me-2"></i> Chỉnh sửa hồ sơ
                                 </a></li>
                                 <li><hr class="dropdown-divider"></li>
                                 <li><a class="dropdown-item text-danger" href="{% url 'logout' %}">
-                                    <i class="fas fa-sign-out-alt"></i> Đăng xuất
+                                    <i class="fas fa-sign-out-alt me-2"></i> Đăng xuất
                                 </a></li>
                             </ul>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'login' %}">Đăng nhập</a>
+                            <a class="nav-link" href="{% url 'login' %}">
+                                <i class="fas fa-sign-in-alt me-1"></i> Đăng nhập
+                            </a>
                         </li>
                     {% endif %}
                 </ul>
